--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>la Carte de la francophonie en Colombie-Britannique</title>
-        <!-- SMK BOOTSTRAP - - - - - - - -->
-        <script src="./node_modules/smk/dist/smk.js"></script>
+          <title>la Carte de la francophonie en Colombie-Britannique</title>
+          <!-- SMK BOOTSTRAP - - - - - - - -->
+          <script src="https://bcgov.github.io/smk/dist/smk.js"></script>
+          <script src="./smk-init.js"></script>
+  
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
         <!-- - - - - - - - - - - - - - - -->
         <style>
@@ -52,12 +54,10 @@
     </head>
 
     <body>
-    <script src="./smk-init.js"></script>
         <div id="header">
-            <img src="assets/bc-gov-logo-transparent.png">
-            <div id="header-title">la Carte de la francophonie en Colombie-Britannique</div>
+            <img src="./assets/bc-gov-logo-transparent.png" width="155" height="52">
+            <div id="header-title"></div>
         </div>
         <div id="smk-map-frame"></div>
-
     </body>
 </html>
