--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <body>
         <div id="header">
-            <img src="./assets/bc-gov-logo-transparent.png" width="155" height="52">
+            <img src="./assets/bc-gov-logo-transparent.png" height="52">
             <div id="header-title"></div>
         </div>
         <div id="smk-map-frame"></div>
