--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
     <body>
         <div id="header">
-            <img src="./assets/bc-gov-logo-transparent.png" height="70">
-            <div id="header-title"></div>
+            <img src="./assets/bc-gov-logo-transparent.png" height="80">
+            <div id="header-title">la Carte de la francophonie en Colombie-Britannique</div>
         </div>
         <div id="smk-map-frame"></div>
     </body>
