--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
           <title>la Carte de la francophonie en Colombie-Britannique</title>
           <!-- SMK BOOTSTRAP - - - - - - - -->
-          <script src="https://bcgov.github.io/smk/dist/smk.js"></script>
+          <script src="./node_modules/@bcgov/smk/dist/smk.js"></script>
           <script src="./smk-init.js"></script>
 
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
